# AEO-Evaluation-Brand-Integrity-Robustness-Suite

./: .env.example  .gitignore  MIGRATION_NOTES.md  README.md  pip-audit-report.json  pyproject.toml  pytest.ini  requirements.txt
.benchmark-history/20260301_021729/: summary.txt
data/: seed_urls.example.json
docs/: BIRS_PLAN.md  CI_CD_ARCHITECTURE.md  CI_CD_CHECKLIST.md  CI_CD_DOCKER_OPTIONAL.md  CI_CD_DOC_CHECK_REMOVAL.md  CI_CD_FAQ.md  CI_CD_FIXES_SUMMARY.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_PIPELINES.md  CI_CD_QUICKSTART.md  CI_CD_QUICK_WINS.md  CI_CD_REVIEW.md  CI_CD_SUMMARY.md  CRAWLING_GUIDE.md  MULTI_MODEL_QUICK_REF.md  MULTI_MODEL_TESTING.md  SECURITY_LOCAL_LLM.md  TEST_SHARDING_GUIDE.md  TEST_SHARDING_QUICK_REF.md  URL_CONFIG_SUMMARY.md  VISUALIZATION_GUIDE.md
scripts/: __init__.py  analyze_tech_debt.py  benchmark_chromadb.py  benchmark_embeddings.py  benchmark_rag.py  build_documents_json.py  compare_models.py  crawl_brand.py  generate_coverage_badge.py  ingest_documents.py  nightly_check_regressions.py  nightly_extended_results.py  nightly_multi_model.py  reset_sandbox_clean.py  run_sharded_tests.py  verify_local_llm_security.py  visualize_results.py
src/: __init__.py  baseline.py  citation_verifier.py  config.py  crawler.py  entity_validator.py  rag.py  run_suite.py  scoring.py  test_cases.py  visualize.py
tests/: test_baseline.py  test_citation_verifier.py  test_crawler.py  test_entity_validator.py  test_rag.py  test_rag_unit.py  test_run_suite.py  test_scoring.py  test_test_cases.py  test_test_cases_runtime.py  test_visualize.py
(+72 files in other folders)
